syntax = "proto3";

option go_package = "github.com/murlock/pebble-test/api/pb";

package pb;

service Service {
    rpc Put(PutRequest) returns (PutReply) {}
    rpc Dump(DumpRequest) returns (DumpReply) {}
}

message PutRequest {
    string key = 1;
    string value = 2;
    bool force = 3;
}

message PutReply {
    bool success = 1;
}

message DumpRequest {
    string output = 1;
}

message DumpReply {
    bool success = 1;
}